# infrastructure/persistence/admin_repo.go
@@ -21,6 +21,30 @@ func (r *AdminRepo) FindByUsername(username string) (*entity.AdminUser, error) {
 	return &admin, nil
 }
 
+func (r *AdminRepo) FindByID(id string) (*entity.AdminUser, error) {
+	var admin entity.AdminUser
+	if err := r.db.First(&admin, "id = ?", id).Error; err != nil {
+		return nil, err
+	}
+	return &admin, nil
+}
+
+func (r *AdminRepo) FindByRestaurantID(restaurantID string) ([]entity.AdminUser, error) {
+	var admins []entity.AdminUser
+	if err := r.db.Where("restaurant_id = ?", restaurantID).Find(&admins).Error; err != nil {
+		return nil, err
+	}
+	return admins, nil
+}
+
+func (r *AdminRepo) FindAll() ([]entity.AdminUser, error) {
+	var admins []entity.AdminUser
+	if err := r.db.Find(&admins).Error; err != nil {
+		return nil, err
+	}
+	return admins, nil
+}
+
 func (r *AdminRepo) Create(admin *entity.AdminUser) error {
 	return r.db.Create(admin).Error
 }
@@ -31,4 +55,8 @@ func (r *AdminRepo) ExistsAny() (bool, error) {
 		return false, err
 	}
 	return count > 0, nil
+}
+
+func (r *AdminRepo) DeleteByID(id string) error {
+	return r.db.Delete(&entity.AdminUser{}, "id = ?", id).Error
 }
